- added scrollbar styles - fixed scrollbar styles another components

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -45,7 +45,7 @@
 
 *::-webkit-scrollbar-thumb
 {
-  background-color: var(--black-08);
+  background-color: var(--black-05);
 }
 
 html {
