--- a/src/components/pages/main-page/components/products-list-by-category/ProductsListByCategory.module.scss
+++ b/src/components/pages/main-page/components/products-list-by-category/ProductsListByCategory.module.scss
@@ -144,6 +144,12 @@
   .list {
     display: flex;
     overflow-x: scroll;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+      height: 4px;
+      background-color: transparent;
+    }
   }
 
   .listItem {
