--- a/src/components/pages/main-page/components/sections/catalog-list/CatalogList.module.scss
+++ b/src/components/pages/main-page/components/sections/catalog-list/CatalogList.module.scss
@@ -108,6 +108,12 @@
   .produtcsList {
     display: flex;
     overflow-x: scroll;
+
+    &::-webkit-scrollbar {
+      width: 5px;
+      height: 4px;
+      background-color: transparent;
+    }
   }
 
   .listItem {
